--- a/public/login.html
+++ b/public/login.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div class="login-box">
-    <img src="https://www.dropbox.com/scl/fi/e7adn2nk9mfef0q1akjs2/Microsoft_logo_-2012.svg?rlkey=35k2k9o7d9r223b16yy7lybfd&dl=0" alt="Microsoft Logo">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Microsoft_logo_%282012%29.svg" alt="Microsoft Logo">
     <h2 id="title">تسجيل الدخول باستخدام بريدك الجامعي</h2>
     
     <!-- خطوة إدخال البريد -->
