--- a/public/links.html
+++ b/public/links.html
@@ -2,292 +2,136 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>روابط</title>
-  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=1a88ft05&dl=1">
+  <title>إدارة الروابط</title>
+  <link rel="icon" type="image/png" href="https://app.iu.edu.jo/cf/images/iu.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
     body {
       background: linear-gradient(to right, #e0eafc, #cfdef3);
       padding: 20px;
       font-family: 'Segoe UI', sans-serif;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
     }
-    footer {
-      text-align: center;
-      margin-top: auto;
-      font-weight: bold;
-      color: #333;
-      font-size: 1.1rem;
-      animation: glow 2s infinite alternate;
-    }
-    @keyframes glow {
-      from { text-shadow: 0 0 5px #0d6efd; }
-      to { text-shadow: 0 0 15px #0d6efd; }
-    }
-    .page-icon {
-      display: block;
-      margin: 0 auto 15px auto;
-      max-height: 120px;
+    .card {
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="container mt-4 text-center">
-    
-    <h2 class="mb-4">إدارة الروابط</h2>
+  <div class="container">
+    <h2 class="mb-4 text-center">إدارة الروابط</h2>
 
-    <div class="text-center mb-3 d-flex justify-content-center gap-2">
-      <button class="btn btn-primary" onclick="openPasswordModal('add')">➕ إضافة رابط جديد</button>
-      <button class="btn btn-warning" onclick="requestDashboardAccess()">🔐 لوحة التحكم</button>
-    </div>
+    <!-- ✅ النموذج -->
+    <form id="addLinkForm" class="card card-body mb-4">
+      <input type="hidden" id="id" name="id">
+      <div class="mb-3">
+        <label class="form-label">الاسم</label>
+        <input type="text" id="name" name="name" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">الوصف</label>
+        <textarea id="description" name="description" class="form-control"></textarea>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">الرابط</label>
+        <input type="url" id="link" name="link" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">نص الرابط</label>
+        <input type="text" id="linkText" name="linkText" class="form-control" required>
+      </div>
+      <div class="form-check mb-3">
+        <input type="checkbox" id="requiresPassword" name="requiresPassword" class="form-check-input">
+        <label for="requiresPassword" class="form-check-label">يتطلب كلمة مرور</label>
+      </div>
+      <button type="button" id="saveBtn" class="btn btn-success">💾 حفظ</button>
+    </form>
 
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover text-center align-middle">
-        <thead class="table-dark">
+    <!-- ✅ جدول عرض الروابط -->
+    <table class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th>الاسم</th>
+          <th>الوصف</th>
+          <th>الرابط</th>
+          <th>نص الرابط</th>
+          <th>كلمة مرور؟</th>
+          <th>إجراءات</th>
+        </tr>
+      </thead>
+      <tbody id="linksTable"></tbody>
+    </table>
+  </div>
+
+  <script>
+    async function loadLinks() {
+      const res = await fetch('/api/links');
+      const data = await res.json();
+      const table = document.getElementById('linksTable');
+      table.innerHTML = '';
+      data.forEach(link => {
+        table.innerHTML += `
           <tr>
-            <th>#</th>
-            <th>وصف</th>
-            <th>الرابط</th>
-            <th>محمي؟</th>
-            <th>إجراءات</th>
+            <td>${link.name || ''}</td>
+            <td>${link.description || ''}</td>
+            <td><a href="${link.link}" target="_blank">🔗 فتح</a></td>
+            <td>${link.linkText}</td>
+            <td>${link.requiresPassword ? 'نعم' : 'لا'}</td>
+            <td>
+              <button class="btn btn-warning btn-sm" onclick='editLink(${JSON.stringify(link)})'>✏️ تعديل</button>
+              <button class="btn btn-danger btn-sm" onclick="deleteLink('${link._id}')">🗑️ حذف</button>
+            </td>
           </tr>
-        </thead>
-        <tbody id="linksTableBody">
-          <tr><td colspan="5">جارٍ التحميل...</td></tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <!-- نافذة كلمة المرور -->
-  <div class="modal fade" id="passwordModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">🔐 أدخل كلمة المرور</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <input type="password" id="actionPassword" class="form-control" placeholder="Enter password" lang="en">
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
-          <button type="button" class="btn btn-primary" id="confirmPasswordBtn">تأكيد</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- نافذة عرض الرابط -->
-  <div class="modal fade" id="viewLinkModal" tabindex="-1">
-    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">📄 عرض الرابط</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body p-0" style="height: 80vh;">
-          <iframe id="linkFrame" src="" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- نافذة إضافة/تعديل رابط -->
-  <div class="modal fade" id="addLinkModal" tabindex="-1">
-    <div class="modal-dialog modal-fullscreen">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="modalTitle">➕ إضافة رابط جديد</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body">
-          <form id="addLinkForm">
-            <input type="hidden" name="id" id="linkId">
-            <div class="mb-3">
-              <label class="form-label">اسم الرابط</label>
-              <input type="text" class="form-control" name="name" required>
-            </div>
-            <div class="mb-3">
-              <label class="form-label">الوصف</label>
-              <textarea class="form-control" name="description"></textarea>
-            </div>
-            <div class="mb-3">
-              <label class="form-label">الرابط</label>
-              <input type="url" class="form-control" name="link" required>
-            </div>
-            <div class="mb-3">
-              <label class="form-label">النص الظاهر للرابط</label>
-              <input type="text" class="form-control" name="linkText" required>
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" name="requiresPassword" id="requiresPassword">
-              <label class="form-check-label" for="requiresPassword">يتطلب كلمة مرور لفتح الرابط</label>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
-          <button type="button" class="btn btn-primary" id="saveLinkBtn">حفظ</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <footer>برمجة وتطوير: ليث عبيدات</footer>
-
-<script>
-const API_BASE = 'https://video-dashboard-backend.onrender.com';
-let pendingAction = null;
-let editId = null;
-let linksData = [];
-
-function openPasswordModal(action, id = null) {
-  pendingAction = action;
-  editId = id;
-  const modal = new bootstrap.Modal(document.getElementById('passwordModal'));
-  modal.show();
-  setTimeout(() => document.getElementById('actionPassword').focus(), 200);
-}
-
-function openInModal(link) {
-  const iframe = document.getElementById('linkFrame');
-  iframe.src = link;
-  new bootstrap.Modal(document.getElementById('viewLinkModal')).show();
-}
-
-function requestDashboardAccess() {
-  openPasswordModal('dashboard');
-}
-
-document.getElementById('actionPassword').addEventListener('keydown', (e) => {
-  if (e.key === 'Enter') {
-    document.getElementById('confirmPasswordBtn').click();
-  }
-});
-
-document.addEventListener('keydown', (e) => {
-  if (e.key === 'F8') {
-    const modalEl = document.getElementById('passwordModal');
-    if (modalEl.classList.contains('show')) {
-      bootstrap.Modal.getInstance(modalEl).hide();
+        `;
+      });
     }
-  }
-});
 
-document.getElementById('confirmPasswordBtn').addEventListener('click', async () => {
-  const password = document.getElementById('actionPassword').value.trim();
-  if (!password) return;
+    function editLink(link) {
+      document.getElementById('id').value = link._id;
+      document.getElementById('name').value = link.name;
+      document.getElementById('description').value = link.description;
+      document.getElementById('link').value = link.link;
+      document.getElementById('linkText').value = link.linkText;
+      document.getElementById('requiresPassword').checked = link.requiresPassword;
+    }
 
-  const res = await fetch(`${API_BASE}/api/verify-password`, {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ password })
-  });
+    async function deleteLink(id) {
+      if (!confirm('هل أنت متأكد من الحذف؟')) return;
+      const res = await fetch(`/api/links/${id}`, { method: 'DELETE' });
+      if (res.ok) loadLinks();
+      else alert('❌ فشل في الحذف');
+    }
 
-  if (res.ok) {
-    bootstrap.Modal.getInstance(document.getElementById('passwordModal')).hide();
+    // ✅ زر الحفظ (إضافة / تعديل) مع تعديل id الفارغ
+    document.getElementById('saveBtn').addEventListener('click', async () => {
+      const form = document.getElementById('addLinkForm');
+      const data = Object.fromEntries(new FormData(form).entries());
+      data.requiresPassword = document.getElementById('requiresPassword').checked;
 
-    if (pendingAction === 'add') {
-      document.getElementById('modalTitle').textContent = '➕ إضافة رابط جديد';
-      document.getElementById('addLinkForm').reset();
-      document.getElementById('linkId').value = '';
-      new bootstrap.Modal(document.getElementById('addLinkModal')).show();
-    } 
-    else if (pendingAction === 'edit') {
-      const link = linksData.find(l => l._id === editId);
-      if (link) {
-        document.getElementById('modalTitle').textContent = '✏️ تعديل رابط';
-        document.querySelector('[name="name"]').value = link.name;
-        document.querySelector('[name="description"]').value = link.description || '';
-        document.querySelector('[name="link"]').value = link.link;
-        document.querySelector('[name="linkText"]').value = link.linkText;
-        document.getElementById('requiresPassword').checked = link.requiresPassword || false;
-        document.getElementById('linkId').value = link._id;
-        new bootstrap.Modal(document.getElementById('addLinkModal')).show();
+      // ✅ لا ترسل id إذا كان فارغ
+      if (!data.id) {
+        delete data.id;
       }
-    }
-    else if (pendingAction === 'delete') {
-      if (confirm('❌ هل أنت متأكد من الحذف؟')) {
-        await fetch(`${API_BASE}/api/links/${editId}`, { method: 'DELETE' });
-        fetchLinks();
+
+      const method = data.id ? 'PUT' : 'POST';
+      const url = data.id ? `/api/links/${data.id}` : '/api/links';
+
+      const res = await fetch(url, {
+        method,
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      });
+
+      if (res.ok) {
+        alert('✅ تم الحفظ بنجاح');
+        loadLinks();
+        form.reset();
+        document.getElementById('id').value = '';
+      } else {
+        alert('❌ فشل العملية');
       }
-    }
-    else if (pendingAction === 'openLink') {
-      const link = linksData.find(l => l._id === editId);
-      if (link) {
-        const secureLink = `${API_BASE}/api/redirect/${encodeURIComponent(link._id || link.link)}`;
-        openInModal(secureLink);
-      }
-    }
-    else if (pendingAction === 'dashboard') {
-      window.location.href = 'dashboard.html';
-    }
+    });
 
-    pendingAction = null;
-    editId = null;
-  } else {
-    alert('❌ كلمة المرور غير صحيحة');
-  }
-});
-
-async function fetchLinks() {
-  const res = await fetch(`${API_BASE}/api/links`);
-  linksData = await res.json();
-  const tbody = document.getElementById('linksTableBody');
-  tbody.innerHTML = '';
-  if (!linksData.length) {
-    tbody.innerHTML = '<tr><td colspan="5">لا توجد روابط</td></tr>';
-    return;
-  }
-  linksData.forEach((link, index) => {
-    const lockIcon = link.requiresPassword ? '🔒' : '';
-    const secureLink = `${API_BASE}/api/redirect/${encodeURIComponent(link._id || link.link)}`;
-    const linkHtml = link.requiresPassword 
-      ? `<a href="#" onclick="openPasswordModal('openLink','${link._id}')">${link.linkText}</a>` 
-      : `<a href="#" onclick="window.open('${secureLink}', '_blank')">${link.linkText}</a>`;
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td>${index + 1}</td>
-      <td>${link.description || ''}</td>
-      <td>${linkHtml}</td>
-      <td>${lockIcon}</td>
-      <td>
-        <button class="btn btn-sm btn-warning" onclick="openPasswordModal('edit','${link._id}')">✏️ تعديل</button>
-        <button class="btn btn-sm btn-danger" onclick="openPasswordModal('delete','${link._id}')">🗑️ حذف</button>
-      </td>
-    `;
-    tbody.appendChild(tr);
-  });
-}
-
-document.getElementById('saveLinkBtn').addEventListener('click', async () => {
-  const form = document.getElementById('addLinkForm');
-  const data = Object.fromEntries(new FormData(form).entries());
-  data.requiresPassword = document.getElementById('requiresPassword').checked;
-  const method = data.id ? 'PUT' : 'POST';
-  const url = data.id ? `${API_BASE}/api/links/${data.id}` : `${API_BASE}/api/links`;
-
-  const res = await fetch(url, {
-    method,
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(data)
-  });
-
-  if (res.ok) {
-    form.reset();
-    bootstrap.Modal.getInstance(document.getElementById('addLinkModal')).hide();
-    fetchLinks();
-  } else {
-    alert('❌ فشل العملية');
-  }
-});
-
-fetchLinks();
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    loadLinks();
+  </script>
 </body>
 </html>
