--- a/public/links.html
+++ b/public/links.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>إدارة الروابط</title>
-  <link rel="icon" type="image/png" href="https://app.iu.edu.jo/cf/images/iu.png">
+  <link rel="icon" type="image/png" href="https://www.dropbox.com/scl/fi/f283e4rvv5cf9x12a1cic/my-website-logo.png?rlkey=yia776im7klypy27af32m0scy&e=1&st=vhaprvzh&dl=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
     body {
